[package]
name = "auction_house"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2021"


[dependencies]
ark-ff = { version = "0.3" }
ark-ec = { version = "0.3" }
ark-std = { version = "0.3" }
ark-bn254 = { version = "0.3", features = [ "curve" ] }
ark-snark = { version = "0.3" }
ark-sponge = { version = "0.3", features = ["r1cs"] }
ark-r1cs-std = { version = "0.3" }
ark-relations = { version = "0.3" }
ark-groth16 = { version = "0.3" }

num-bigint = { version = "0.4", features = ["rand"] }
num-integer = { version = "0.1" }
num-traits = { version = "0.2" }
rand = { version = "0.8" }
digest = { version = "0.9" }
once_cell = { version = "1.9" }


rsa = { path = "../rsa" }
timed_commitments = { path = "../timed_commitments" }
range_proofs = { path = "../range_proofs" }
sha3 = { version = "0.9" }

rayon = { version = "1", optional = true }
ark-bls12-381 = { version = "0.3", features = [ "curve" ] }
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-poly = { version = "0.3" }
ark-poly-commit = { version = "0.3" }



[dev-dependencies]
ark-ff = { version = "0.3" }
rand = { version = "0.8" }
ark-bls12-381 = { version = "0.3", features = [ "curve" ] }
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-poly = { version = "0.3" }
ark-poly-commit = { version = "0.3" }
ark-groth16 = { version = "0.3" }


sha3 = { version = "0.9" }
once_cell = { version = "1.9" }

[features]
