[package]
name = "solidity"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version = "0.3" }
ark-std = { version = "0.3" }
ark-bn254 = { version = "0.3", features = [ "curve" ] }

ethabi = "16.0.0"
primitive-types = { version = "0.10", features = ["rlp"] }
hex = { version = "0.4" }
sha3 = { version = "0.9" }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = { version = "0.1" }
num-traits = { version = "0.2" }

solidity_test_utils = { path = "../solidity_test_utils" }
range_proofs = { path = "../range_proofs" }
rsa = { path = "../rsa" }

[dev-dependencies]
rand = { version = "0.8" }

once_cell = { version = "1.9" }


[[bench]]
name = "bulletproofs_verifier"
path = "benches/bulletproofs_verifier.rs"
harness = false

[[bench]]
name = "pedersen"
path = "benches/pedersen.rs"
harness = false

[[bench]]
name = "rsa"
path = "benches/rsa.rs"
harness = false

[[bench]]
name = "fkps"
path = "benches/fkps.rs"
harness = false

[[bench]]
name = "tc"
path = "benches/tc.rs"
harness = false


[[bench]]
name = "poe_verifier"
path = "benches/poe_verifier.rs"
harness = false
