[package]
name = "solidity"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.3" }
ark-ec = { version = "0.3" }
ark-std = { version = "0.3" }
ark-bn254 = { version = "0.3", features = [ "curve" ] }
ark-snark = { version = "0.3" }
ark-sponge = { version = "0.3", features = ["r1cs"] }
ark-r1cs-std = { version = "0.3" }
ark-relations = { version = "0.3" }

ethabi = "16.0.0"
primitive-types = { version = "0.10", features = ["rlp"] }
hex = { version = "0.4" }
sha3 = { version = "0.9" }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = { version = "0.1" }
num-traits = { version = "0.2" }
once_cell = { version = "1.9" }


csv = "1.1.6"

solidity_test_utils = { path = "../solidity_test_utils" }
range_proofs = { path = "../range_proofs" }
rsa = { path = "../rsa" }
timed_commitments = { path = "../timed_commitments" }
auction_house = { path = "../auction_house" }

ark-groth16 = { version = "0.3" }
ark-marlin = { version = "0.3" }

digest = { version = "0.9" }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
rayon = { version = "1", optional = true }
ark-bls12-381 = { version = "0.3", features = [ "curve" ] }
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-ed-on-bn254 = "0.3.0"


[dev-dependencies]
ark-ff = { version = "0.3" }
rand = { version = "0.8" }
ark-bls12-381 = { version = "0.3", features = [ "curve" ] }
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-ed-on-bn254= { version = "0.3", features = ["r1cs"] }
ark-poly = { version = "0.3" }
ark-poly-commit = { version = "0.3" }

once_cell = { version = "1.9" }
sha3 = { version = "0.9" }
tracing-subscriber = { version = "0.3" }

[features]
default = ["std", "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-groth16/std", "ark-marlin/std" ]
parallel = [ "rayon", "ark-std/parallel", "ark-groth16/parallel", "ark-marlin/parallel" ]
print-trace = [ "ark-std/print-trace" ]


[[bench]]
name = "bulletproofs_verifier"
path = "benches/bulletproofs_verifier.rs"
harness = false

[[bench]]
name = "pedersen"
path = "benches/pedersen.rs"
harness = false

[[bench]]
name = "rsa"
path = "benches/rsa.rs"
harness = false

[[bench]]
name = "poe_verifier"
path = "benches/poe_verifier.rs"
harness = false

[[bench]]
name = "fkps"
path = "benches/fkps.rs"
harness = false

[[bench]]
name = "tc"
path = "benches/tc.rs"
harness = false

[[bench]]
name = "auction_house_baseline"
path = "benches/auction_house_baseline.rs"
harness = false

[[bench]]
name = "auction_house_rp"
path = "benches/auction_house_rp.rs"
harness = false

[[bench]]
name = "auction_house_tc"
path = "benches/auction_house_tc.rs"
harness = false

[[bench]]
name = "tc_snark"
path = "benches/tc_snark.rs"
harness = false

