[package]
name = "timed_commitment"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2021"


[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = { version = "0.1" }
num-traits = { version = "0.2" }
rand = { version = "0.8" }
digest = { version = "0.10" }
aes-gcm = { version = "0.9" }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }

rsa = { path = "../rsa" }

[dev-dependencies]
once_cell = { version = "1.9" }
sha3 = { version = "0.10" }

[features]
